--- a/index.css
+++ b/index.css
@@ -10,6 +10,12 @@
   overflow: hidden;
   flex-shrink: 0;
 }
+.white-color-icon {
+  height: 337px;
+  width: 538px;
+  position: relative;
+  overflow: hidden;
+}
 .features,
 .private-label {
   text-decoration: none;
@@ -340,4 +346,20 @@
   text-align: left;
   padding-left: 50px;
   line-height: normal;
+}
+.text-gradient {
+  font-family: "Concert One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  background: linear-gradient(90deg, #3A50B3, #37A3F1);
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-text-fill-color: transparent;
+}
+.concert-one-regular {
+  font-family: "Concert One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
