--- a/index.css
+++ b/index.css
@@ -484,3 +484,26 @@
   background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.swiper-container {
+  width: 100%;
+  height: 592px;
+}
+.swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+
+  position: relative;
+  overflow: hidden;
+}
+.image-container {
+  width: 100%;
+  height: 100%;
+}
+.image-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
