--- a/index.css
+++ b/index.css
@@ -530,13 +530,13 @@
 .translateOnHover {
   transform: translateY(0);
 }
-@keyframes slideInLeft {
+@keyframes slideInLeft1 {
   from {
     transform: translateX(-100%);
     opacity: 0;
   }
   to {
-    transform: translateX(20%);
+    transform: translateX(0%);
     opacity: 1;
   }
 }
@@ -553,7 +553,7 @@
 }
 
 .slide-left {
-  animation: slideInLeft 1s forwards;
+  animation: slideInLeft1 1s forwards;
 }
 .slide-right {
   animation: slideInRight1 1s forwards;
@@ -609,6 +609,36 @@
   background-clip: text;
   color: transparent;
   -webkit-text-fill-color: transparent;
+}
+.bg-radial-gradient {
+  background: radial-gradient(circle, #37A3F1 32%, #3A50B3 100%);
+}
+
+.fade-in {
+  animation: fadeIn 1s forwards;
+}
+
+/* Fade-out animation */
+.fade-out {
+  animation: fadeOut 1s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
 
 @media (max-width: 768px) {
