Updated Video Banner

--- a/index.css
+++ b/index.css
@@ -533,6 +533,36 @@
     opacity: 1;
   }
 }
+@keyframes pods {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(100%);
+    opacity: 0;
+    display: hidden;
+  }
+}
+@keyframes slideOutRight {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(100%);
+    opacity: 0;
+    display: hidden;
+  }
+}
+
+.slide-out-right{
+  animation: slideOutRight 1s ease-in-out forwards;
+}
+
+.pods {
+  animation: pods 1s ease-in-out forwards ;
+}
 
 .step3 {
   animation: step3 1s ease-in-out forwards;
