--- a/index.css
+++ b/index.css
@@ -374,7 +374,11 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
-
+.urbanist-regular {
+  font-family: "Urbanist", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 @keyframes slideInLeft {
   0% {
     transform: translateX(-100%);
@@ -613,7 +617,6 @@
   100% {
     transform: translateX(100%);
     opacity: 0;
-    display: hidden;
   }
 }
 
