--- a/index.css
+++ b/index.css
@@ -3,6 +3,15 @@
   --line-height: 16px;
   --text-transform: uppercase;
 }
+h1{
+  font-family: "Concert One", sans-serif !important;
+  font-weight: 700 !important;
+}
+
+h2{
+  font-family: "Mitr", sans-serif !important;
+  font-weight: 500 !important;
+}
 .blue-color-icon {
   height: 102px;
   width: 156px;
@@ -366,7 +375,10 @@
 }
 .concert-one-regular {
   font-family: "Concert One", sans-serif;
-  font-weight: 400;
+  font-style: normal;
+}
+.mitr-regular {
+  font-family: "Mitr", sans-serif;
   font-style: normal;
 }
 .league-spartan {
